--- a/KR/php/composer.json
+++ b/KR/php/composer.json
@@ -3,6 +3,7 @@
         "fakerphp/faker": "^1.24",
         "szymach/c-pchart": "^3.0",
         "amenadiel/jpgraph": "^4.1",
-        "ext-gd": "*"
+        "ext-gd": "*",
+      "ext-pdo": "*"
     }
 }
